--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Omar Alaa",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
